remove bower dependency

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ABC Life insurance</title>
 
-    <link rel="stylesheet" href="./libs/bootstrap/dist/css/bootstrap.min.css">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+        crossorigin="anonymous">
 
     <link rel="stylesheet" href="./desktop.css">
 
@@ -66,7 +72,7 @@
                     <div class="clear-fix"></div>
                 </div>
 
-                    <div class="clear-fix"></div>
+                <div class="clear-fix"></div>
 
                 <div class=" chat-card chat-card-left">
                     <img class="profile-pic" src="./icons/Lisa_Pic_d.png" alt="profile picture">
@@ -77,8 +83,7 @@
                         <p>12 mins away...</p>
                     </div>
                     <div class="message">
-                        <p> obcaecati nulla quisquam magnam, eos saepe fugiat ullam illum. Obcaecati
-                            animi fugiat inventore!
+                        <p> obcaecati nulla quisquam magnam, eos saepe fugiat ullam illum. Obcaecati animi fugiat inventore!
                         </p>
                     </div>
                     <div class="clear-fix"></div>
@@ -155,7 +160,7 @@
                     <div class="clear-fix"></div>
                 </div>
 
-                    <div class="clear-fix"></div>
+                <div class="clear-fix"></div>
 
                 <div class=" chat-card chat-card-left">
                     <img class="profile-pic" src="./icons/Lisa_Pic_d.png" alt="profile picture">
@@ -166,8 +171,7 @@
                         <p>2 mins away...</p>
                     </div>
                     <div class="message">
-                        <p> obcaecati nulla quisquam magnam, eos saepe fugiat ullam illum. Obcaecati
-                            animi fugiat inventore!
+                        <p> obcaecati nulla quisquam magnam, eos saepe fugiat ullam illum. Obcaecati animi fugiat inventore!
                         </p>
                     </div>
                     <div class="clear-fix"></div>
@@ -239,7 +243,7 @@
                     <div class="clear-fix"></div>
                 </div>
 
-                    <div class="clear-fix"></div>
+                <div class="clear-fix"></div>
 
                 <div class=" chat-card chat-card-left">
                     <img class="profile-pic" src="./icons/Lisa_Pic_d.png" alt="profile picture">
@@ -250,8 +254,7 @@
                         <p>1 mins away...</p>
                     </div>
                     <div class="message">
-                        <p> obcaecati nulla quisquam magnam, eos saepe fugiat ullam illum. Obcaecati
-                            animi fugiat inventore!
+                        <p> obcaecati nulla quisquam magnam, eos saepe fugiat ullam illum. Obcaecati animi fugiat inventore!
                         </p>
                     </div>
                     <div class="clear-fix"></div>
@@ -358,10 +361,13 @@
             </div>
         </div>
     </nav>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+        crossorigin="anonymous"></script>
 
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
 
-    <srcipt src="./libs/jquery/dist/jquery.min.js" />
-    <srcipt src="./libs/bootstrap/dist/js/bootstrap.min.js" />
 </body>
 
 </html>
