--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
         crossorigin="anonymous">
 
     <link rel="stylesheet" href="./desktop.css">
+    <link rel="stylesheet" href="./mobile.css">
 
 </head>
 
@@ -344,19 +345,28 @@
     <!--bottom bar-->
     <nav class="navbar navbar-fixed-bottom">
         <div class="row">
-            <div class="col-sm-1">
+            <div class="col-xs-0 col-sm-1">
 
             </div>
-            <div class="bottom-bar col-sm-10">
-                <img src="./icons/smiley.png" class="smiley-btn">
-                <input type="text" class="send-box text-left" placeholder="Type your text here ..">
-                <input type="button" value="send" class="send-btn">
+            <div class="bottom-bar col-xs-12 col-sm-10">
+                <div class="smiley-btn">
+                    <img src="./icons/smiley.png" class="smiley">
+                </div>
+
+                <div class="send-box">
+                    <input type="text" placeholder="Type your text here .." class="send-box-input">
+                </div>
+
+                <div class="send-btn-box">
+                    <p class="send-btn"> send </p>
+                    <img src="./icons/Enter-Arrow.png" alt="enter arrow" class="send-btn-image">
+                </div>
 
                 <div class="clear-fix">
 
                 </div>
             </div>
-            <div class="col-sm-1">
+            <div class="col-xs-0 col-sm-1">
 
             </div>
         </div>
