--- a/public/index.html
+++ b/public/index.html
@@ -293,46 +293,40 @@
                     </div>
                     <div class="clear-fix"></div>
                 </div>
-
+                 <div class="chat-card">
+                    <div class="image-card-left image-card">
+                        <div class="insurance-pic">
+                            <img src="./icons/InsurancePic-01.jpg" alt="insurance" style="width:60%;" />
+                            <img src="" alt="">
+                        </div>
+                    </div>
+                    <div class="clear-fix"></div>
+                </div>
 
                 <div class="chat-card chat-card-right">
                     <div class="time-holder">
-                        <p>0 mins away...</p>
+                        <p>1 mins away...</p>
                     </div>
                     <div class="profile-name-holder">
                         <p>Jhon says</p>
                     </div>
                     <div class="message">
-                        <p>what is this?
+                        <p>Lorem ipsum dolor sit amet
                         </p>
                     </div>
                     <img class="profile-pic" src="./icons/john_Pic_d.png" alt="profile picture">
 
                     <div class="clear-fix"></div>
                 </div>
-                <!--<div class="login-box">
-
-                    <div class="login-box-left col-xs-5 col-sm-3">
-                        <p>Login with Social Media</p>
-                        <button class="login-button">
-                            <img class="img-responsive" src="./icons/facebook.png" alt="facebook">
-                            <p>signin with facebook</p>
-                        </button>
-                        <button class="login-button">
-                            signin with twitter
-                        </button>
-                        <button class="login-button">
-                            signin with google+
-                        </button>
+                <div class="chat-card">
+                    <div class="image-card-right image-card">
+                        <div class="insurance-pic">
+                            <img src="./icons/InsurancePic-01.jpg" alt="insurance" style="width:60%;" />
+                            <img src="./icons/InsurancePic-01-notext.jpg" alt="" style="width:30%; margin-left:8%; ">
+                        </div>
                     </div>
-                    <div class="center-division col-xs-2 col-sm-2">
+                </div>
 
-                    </div>
-                    <div class="login-box-right col-xs-5 col-sm-3">
-                        <p>Login with Email</p>
-                    </div>
-
-                </div>-->
             </div>
 
             <!--right column that contains the right whitespace on larger devices-->
