card insurance added with selected option

--- a/public/index.html
+++ b/public/index.html
@@ -293,11 +293,15 @@
                     </div>
                     <div class="clear-fix"></div>
                 </div>
-                 <div class="chat-card">
+                <div class="chat-card">
                     <div class="image-card-left image-card">
                         <div class="insurance-pic">
-                            <img src="./icons/InsurancePic-01.jpg" alt="insurance" style="width:60%;" />
-                            <img src="" alt="">
+                            <div class="insurance-pic-left">
+                                <img src="./icons/InsurancePic-01.jpg" style="width:100%;" />
+                            </div>
+                            <div class="insurance-pic-right">
+                                <img src="./icons/InsurancePic-01-notext.jpg" style="width:100%;">
+                            </div>
                         </div>
                     </div>
                     <div class="clear-fix"></div>
@@ -321,10 +325,29 @@
                 <div class="chat-card">
                     <div class="image-card-right image-card">
                         <div class="insurance-pic">
-                            <img src="./icons/InsurancePic-01.jpg" alt="insurance" style="width:60%;" />
-                            <img src="./icons/InsurancePic-01-notext.jpg" alt="" style="width:30%; margin-left:8%; ">
+                            <div class="insurance-pic-left">
+                                <img src="./icons/InsurancePic-01.jpg" style="width:100%;" />
+                            </div>
+                            <div class="insurance-pic-right">
+                                <img src="./icons/InsurancePic-01-notext.jpg" style="width:100%;">
+                            </div>
                         </div>
                     </div>
+                    <div class="clear-fix"></div>
+                </div>
+                <div class="chat-card">
+                    <div class="image-card-right image-card">
+                        <div class="insurance-pic ">
+                            <div class="insurance-pic-left selected">
+                                <span></span>
+                                <img src="./icons/InsurancePic-01.jpg" style="width:100%;" />
+                            </div>
+                            <div class="insurance-pic-right">
+                                <img src="./icons/InsurancePic-01.jpg" style="width:100%;">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="clear-fix"></div>
                 </div>
 
             </div>
